# CogniStream-MagicBlock-ER

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  build.sh  models  package.json  render.yaml  requirements.txt  run_backend.sh  sample_clinical_report.txt  sample_patient_ANON_MH_0024.json  tsconfig.json
backend/: .env.example  main.py
backend/engine/: ner_anonymizer.py  scorer.py
backend/routers/: ingest.py  patients.py  tee_auth.py
backend/schemas/: patient.py
backend/services/: zk_verify.py
data/: patients.json
frontend/: package.json  pnpm-lock.yaml
frontend/src/: globals.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/er-demo/: page.tsx
frontend/src/app/patients/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/simulator/: page.tsx
frontend/src/app/voice/: page.tsx
frontend/src/components/: ERStatusIndicator.tsx  Toast.tsx  VerifyWithReclaim.tsx  WalletProvider.tsx
frontend/src/components/ui/: GoogleMaps.tsx  avatar.tsx  (+11 more)
frontend/src/hooks/: useSpeechRecognition.ts
frontend/src/lib/: api.ts  api.ts.orig  api.ts.patch  api.ts.rej  elevenlabs.ts  er-client.ts  errors.ts  explorer.ts  format.ts  hash.ts  onchainPatient.ts  patch.js  patch2.js  patch3.js  patch4.js  pdas.ts  program.ts  reclaim-client.ts  solana.ts  tee.ts  voice-consent.ts
programs/cognistream/: Cargo.toml
programs/cognistream/src/: constants.rs  errors.rs  lib.rs  state.rs
tests/: cognistream.ts
(+5 files in other folders)
