[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin block-buffer to avoid edition2024 issues
[patch.crates-io]
block-buffer = { git = "https://github.com/RustCrypto/utils", tag = "block-buffer-v0.10.4" }
