[package]
name = "cognistream"
version = "0.1.0"
description = "CogniStream - Privacy-First Clinical Trial Matching on Solana with MagicBlock ER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cognistream"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck = "1.14"

